fixed alignment of content for fondations carousel and buttons working

--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -91,10 +91,9 @@
 .fondations .full-width.carousel-container .carousel.hero-banner.scrollable .carousel-slide .carousel-slide-content {
   background-color: unset;
   text-align: center;
-  margin: auto;
+  margin: 0;
   opacity: 0;
   transition: all 3s ease-in-out;
-  transform: translateY(-50%);
 
   --slide-content-width: unset;
 
@@ -138,27 +137,11 @@
   font-size: 10px;
 }
 
-.fondations .full-width.carousel-container .carousel.hero-banner.scrollable .carousel-slide .carousel-slide-content p:nth-child(2) {
-  padding-left: 54px;
-  background-image: url('/icons/fleche_right.svg');
-  background-position: left center;
-  background-repeat: no-repeat;
-  display: inline-block;
-  color: inherit;
-  font-size: inherit;
-  line-height: 60px;
-  font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: .2em;
-  background-color: transparent;
-  border: 0;
-}
-
 .fondations .full-width.carousel-container .carousel.hero-banner.scrollable .carousel-slide .direction-icon-section {
     position: absolute;
     bottom: 20px;
     display: inline-block;
-    z-index: 100;
+    z-index: 1;
     left: 20px;
     transform: none;
 }
@@ -266,8 +249,6 @@
   font-style: normal;
 }
 
-
-
 .biencommun .full-width.carousel-container .carousel.hero-banner div.social-cr-wrapper  {
   position: absolute;
   bottom: 37px;
@@ -275,7 +256,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  z-index: 10;
+  z-index: 1;
   color: var(--news-button-text-colour);
   font-size: 10px;
   font-weight: 250;
@@ -286,10 +267,18 @@
   bottom: 48px;
   display: inline-block;
   right: 20px;
-  z-index: 10;
+  z-index: 1;
 }
 
-.biencommun .full-width.carousel-container .carousel.hero-banner div.slide-legend > p > a, .fondations .full-width.carousel-container .carousel.hero-banner.scrollable div.slide-legend > p > a {
+.biencommun .full-width.carousel-container .carousel.hero-banner div.slide-legend > p > a {
+  color: var(--news-button-text-colour);
+}
+
+.fondations .full-width.carousel-container .carousel.hero-banner.scrollable .carousel-slide a{
+  pointer-events: auto;
+}
+
+.fondations .full-width.carousel-container .carousel.hero-banner.scrollable div.slide-legend > p > a {
   color: var(--news-button-text-colour);
 }
 
@@ -301,6 +290,28 @@
 .biencommun .full-width.carousel-container .carousel.hero-banner div.slide-legend > p > a:hover {
   text-decoration: none;
   color: var(--btn-bg);
+}
+
+.fondations .full-width.carousel-container .carousel.hero-banner.scrollable .carousel-slide .button-container:hover,
+.fondations .full-width.carousel-container .carousel.hero-banner.scrollable .carousel-slide a:hover {
+  text-decoration: none;
+  opacity: 0.7;
+}
+
+.fondations .full-width.carousel-container .carousel.hero-banner.scrollable .carousel-slide .carousel-slide-content p:nth-child(2) a {
+  padding-left: 54px;
+  background-image: url('/icons/fleche_right.svg');
+  background-position: left center;
+  background-repeat: no-repeat;
+  display: inline-block;
+  color: inherit;
+  line-height: 60px;
+  text-transform: uppercase;
+  letter-spacing: .2em;
+  background-color: transparent;
+  border: 0;
+  font-size: 24px;
+  font-weight: 600;
 }
 
 .carousel.carousel-vertical .carousel-slide-indicators {
@@ -434,9 +445,8 @@
     background-color: unset;
     text-align: center;
     margin: auto;
-    width: 100%;
     max-width: 1200px;
-    padding: 0;
+    padding: 0 80px;
   }
 
   .fondations .full-width.carousel-container .carousel.hero-banner.scrollable .carousel-slide .carousel-slide-content p {
@@ -450,7 +460,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    z-index: 10;
+    z-index: 1;
     color: var(--news-button-text-colour);
     font-size: 10px;
     font-weight: 250;
